加入拓展名过滤、部署参数cfg、

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,6 +6,13 @@
 [settings]
 default = mycrawler.settings
 
-[deploy]
-#url = http://localhost:6800/
+
+#以下是分布式部署的设置：
+#要求每个机子上都有scrapyd-client和scrapyd
+[deploy:master]
+url = http://localhost:6800/
+project = mycrawler  # 工程的名称
+
+[deploy:slave]
+url = http://192.168.28.135:6800/
 project = mycrawler
